<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.limecoders.thecrease.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_score"
        android:name="com.limecoders.thecrease.ui.score.ScoreFragment"
        android:label="@string/score"
        tools:layout="@layout/fragment_score" />

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.limecoders.thecrease.ui.store.StoreFragment"
        android:label="@string/store"
        tools:layout="@layout/fragment_store" />

</navigation>